--- a/myproject/templates/restaurants/manageStaff.html
+++ b/myproject/templates/restaurants/manageStaff.html
@@ -40,7 +40,7 @@
                 </tr>
             </thead>
             <tbody id="Table">
-
+            
                 {% for staff in staffs %}
                     {% if  request.user.role == "manager" and staff.role == "staff"%}
                     <tr>
@@ -66,7 +66,7 @@
                                 data-bs-target="#removeStaff{{staff.memberID}}">Delete</a>
                         </td>
                     </tr>
-                    {% elif request.user.role == "executive" %}
+                    {% elif request.user.role == "executive" and staff.resID.companyID == company.companyID %}
                     <tr>
                         <th scope="row">{{staff.memberID}}</th>
                         <td>
