--- a/myproject/templates/components/navbar.html
+++ b/myproject/templates/components/navbar.html
@@ -93,7 +93,7 @@
                             <h5 class="card-title d-flex justify-content-start">Company : </h5>
                         </td>
                         <td>
-                            <h5 class="card-title d-flex justify-content-center">{{profile.companyID}}</h5>
+                            <h5 class="card-title d-flex justify-content-center">{{request.user.companyID.companyName}}</h5>
                         </td>
                     </tr>
                     <tr>
