--- a/myproject/templates/admin/dashboard.html
+++ b/myproject/templates/admin/dashboard.html
@@ -1,102 +1,101 @@
 {% extends 'components/base.html' %}
 {% load static %}
 {% block content %}
-<div class="row no-gutters">
-            <div class="col-md-6 col-xxl-3 mb-3 pr-md-2">
-              <div class="card h-md-100">
-                <div class="card-header pb-0">
-                  <h6 class="mb-0 mt-2 d-flex align-items-center">Weekly Sales<span class="ml-1 text-400" data-toggle="tooltip" data-placement="top" title="" data-original-title="Calculated according to last week's sales"><svg class="svg-inline--fa fa-question-circle fa-w-16" data-fa-transform="shrink-1" aria-hidden="true" focusable="false" data-prefix="far" data-icon="question-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="" style="transform-origin: 0.5em 0.5em;"><g transform="translate(256 256)"><g transform="translate(0, 0)  scale(0.9375, 0.9375)  rotate(0 0 0)"><path fill="currentColor" d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z" transform="translate(-256 -256)"></path></g></g></svg><!-- <span class="far fa-question-circle" data-fa-transform="shrink-1"></span> Font Awesome fontawesome.com --></span></h6>
-                </div>
-                <div class="card-body d-flex align-items-end">
-                  <div class="row flex-grow-1">
-                    <div class="col">
-                      <div class="fs-4 font-weight-normal text-sans-serif text-700 line-height-1 mb-1">$47K</div><span class="badge badge-pill fs--2 badge-soft-success">+3.5%</span>
-                    </div>
-                    <div class="col-auto pl-0">
-                      <div class="echart-bar-weekly-sales h-100" _echarts_instance_="ec_1622997345068" style="-webkit-tap-highlight-color: transparent; user-select: none; position: relative;"><div style="position: relative; width: 136px; height: 61px; padding: 0px; margin: 0px; border-width: 0px; cursor: pointer;"><canvas data-zr-dom-id="zr_0" width="204" height="91" style="position: absolute; left: 0px; top: 0px; width: 136px; height: 61px; user-select: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); padding: 0px; margin: 0px; border-width: 0px;"></canvas></div><div style="position: absolute; display: none; border-style: solid; white-space: nowrap; z-index: 9999999; background-color: rgb(255, 255, 255); border-width: 1px; border-color: rgb(216, 226, 239); border-radius: 4px; color: rgb(11, 23, 39); font: 14px / 21px &quot;Microsoft YaHei&quot;; padding: 7px 10px; left: -17.5px; top: -11px; pointer-events: none;">Mon: 200</div></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-xxl-3 mb-3 pl-md-2 pr-xxl-2">
-              <div class="card h-md-100">
-                <div class="card-header pb-0">
-                  <h6 class="mb-0 mt-2">Total Order</h6>
-                </div>
-                <div class="card-body pt-0">
-                  <div class="row h-100">
-                    <div class="col align-self-end">
-                      <div class="fs-4 font-weight-normal text-sans-serif text-700 line-height-1 mb-1">58.4K</div><span class="badge badge-pill fs--2 bg-200 text-primary"><svg class="svg-inline--fa fa-caret-up fa-w-10 mr-1" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="caret-up" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" data-fa-i2svg=""><path fill="currentColor" d="M288.662 352H31.338c-17.818 0-26.741-21.543-14.142-34.142l128.662-128.662c7.81-7.81 20.474-7.81 28.284 0l128.662 128.662c12.6 12.599 3.676 34.142-14.142 34.142z"></path></svg><!-- <span class="fas fa-caret-up mr-1"></span> Font Awesome fontawesome.com -->13.6%</span>
-                    </div>
-                    <div class="col-auto pl-0">
-                      <div class="echart-line-total-order h-100" style="-webkit-tap-highlight-color: transparent; user-select: none; position: relative;" _echarts_instance_="ec_1622997345067"><div style="position: relative; width: 140px; height: 86px; padding: 0px; margin: 0px; border-width: 0px; cursor: default;"><canvas data-zr-dom-id="zr_0" width="210" height="129" style="position: absolute; left: 0px; top: 0px; width: 140px; height: 86px; user-select: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); padding: 0px; margin: 0px; border-width: 0px;"></canvas></div><div style="position: absolute; display: none; border-style: solid; white-space: nowrap; z-index: 9999999; background-color: rgb(255, 255, 255); border-width: 1px; border-color: rgb(216, 226, 239); border-radius: 4px; color: rgb(11, 23, 39); font: 14px / 21px &quot;Microsoft YaHei&quot;; padding: 7px 10px; left: 72px; top: -17px; pointer-events: none;">Week 5: 130</div></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-xxl-3 mb-3 pr-md-2 pl-xxl-2">
-              <div class="card h-md-100">
-                <div class="card-body">
-                  <div class="row h-100 justify-content-between no-gutters">
-                    <div class="col-5 col-sm-6 col-xxl pr-2">
-                      <h6 class="mt-1">Market Share</h6>
-                      <div class="fs--2 mt-3">
-                        <div class="d-flex flex-between-center mb-1">
-                          <div class="d-flex align-items-center"><span class="dot bg-primary"></span><span class="font-weight-semi-bold">Samsung</span></div>
-                          <div class="d-xxl-none">33%</div>
-                        </div>
-                        <div class="d-flex flex-between-center mb-1">
-                          <div class="d-flex align-items-center"><span class="dot bg-info"></span><span class="font-weight-semi-bold">Huawei</span></div>
-                          <div class="d-xxl-none"> 29%</div>
-                        </div>
-                        <div class="d-flex flex-between-center mb-1">
-                          <div class="d-flex align-items-center"><span class="dot bg-300"></span><span class="font-weight-semi-bold">Apple</span></div>
-                          <div class="d-xxl-none"> 20%</div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-auto">
-                      <div class="echart-doughnut" _echarts_instance_="ec_1622997345071" style="-webkit-tap-highlight-color: transparent; user-select: none; position: relative;"><div style="position: relative; width: 106px; height: 106px; padding: 0px; margin: 0px; border-width: 0px; cursor: default;"><canvas data-zr-dom-id="zr_0" width="159" height="159" style="position: absolute; left: 0px; top: 0px; width: 106px; height: 106px; user-select: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); padding: 0px; margin: 0px; border-width: 0px;"></canvas></div><div style="position: absolute; display: none; border-style: solid; white-space: nowrap; z-index: 9999999; background-color: rgb(255, 255, 255); border-width: 1px; border-color: rgb(216, 226, 239); border-radius: 4px; color: rgb(0, 0, 0); font: 14px / 21px &quot;Microsoft YaHei&quot;; padding: 7px 10px; left: 19.5px; top: 39px; pointer-events: none;"><strong>Samsung:</strong> 57.61%</div></div>
-                      <div class="absolute-centered font-weight-medium text-dark fs-2">26M</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-xxl-3 mb-3 pl-md-2">
-              <div class="card h-md-100">
-                <div class="card-header d-flex flex-between-center pb-0">
-                  <h6 class="mb-0">Weather</h6>
-                  <div class="dropdown text-sans-serif btn-reveal-trigger"><button class="btn btn-link text-600 btn-sm dropdown-toggle btn-reveal dropdown-caret-none" type="button" id="dropdown-weather-update" data-toggle="dropdown" data-boundary="viewport" aria-haspopup="true" aria-expanded="false"><svg class="svg-inline--fa fa-ellipsis-h fa-w-16 fs--2" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="ellipsis-h" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M328 256c0 39.8-32.2 72-72 72s-72-32.2-72-72 32.2-72 72-72 72 32.2 72 72zm104-72c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72zm-352 0c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72z"></path></svg><!-- <span class="fas fa-ellipsis-h fs--2"></span> Font Awesome fontawesome.com --></button>
-                    <div class="dropdown-menu dropdown-menu-right border py-0" aria-labelledby="dropdown-weather-update">
-                      <div class="bg-white py-2"><a class="dropdown-item" href="#!">View</a><a class="dropdown-item" href="#!">Export</a>
-                        <div class="dropdown-divider"></div><a class="dropdown-item text-danger" href="#!">Remove</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-body pt-2">
-                  <div class="row no-gutters h-100 align-items-center">
-                    <div class="col">
-                      <div class="media align-items-center"><img class="mr-3" src="../assets/img/icons/weather-icon.png" alt="" height="60">
-                        <div class="media-body">
-                          <h6 class="mb-2">New York City</h6>
-                          <div class="fs--2 font-weight-semi-bold">
-                            <div class="text-warning">Sunny</div>Precipitation: 50%
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-auto text-center pl-2">
-                      <div class="fs-4 font-weight-normal text-sans-serif text-primary mb-1 line-height-1">31°</div>
-                      <div class="fs--1 text-800">32° / 25°</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
 
+<table class="table table-md border border-3 myTable" id="test">
+  <thead>
+    <tr class="text-center">
+      <th scope="col">ID</th>
+      <th scope="col">Name</th>
+      <th scope="col">Queue Count/th>
+      <th scope="col">Score</th>
+    </tr>
+  </thead>
+  <tbody id="queueTable">
+
+    <tr class="text-center align-middle">
+      <td>{{queues_res.queueID}}</td>
+      <td>{{queues_res.queueCreated}}</td>
+      <td class="text-danger">{{queues_res.reserveDateTime}}</td>
+      <td>
+        <input type="hidden" name="next" value="{{ request.path }}">
+        <select class="form-select d-inline me-2" style="width: 150px;" name="status">
+          <option selected hidden>{{queues_res.status}}</option>
+          <option value="calling">calling</option>
+          <option value="waiting">waiting</option>
+        </select>
+      </td>
+      <td>
+        <button class="btn btn-primary d-blcok" type="submit">Update
+          <input type="text" name="queueIsPass" value="false" hidden></button>
+        <input type="number" name="point" value="0" hidden>
+      </td>
+      <td>
+        <input type="hidden" name="next" value="{{ request.path }}">
+        <button class="btn btn-success d-blcok" type="submit">Success
+          <input type="text" name="queueIsPass" value="true" hidden>
+          <input type="text" name="status" value="success" hidden>
+          <input type="number" name="point" value="3" hidden>
+        </button>
+      </td>
+      <td>
+        <input type="hidden" name="next" value="{{ request.path }}">
+        <button class="btn btn-danger d-blcok" type="submit">Fail
+          <input type="text" name="queueIsPass" value="true" hidden>
+          <input type="text" name="status" value="fail" hidden></button>
+        <input type="number" name="point" value="-10" hidden>
+      </td>
+      <td>
+        <input type="hidden" name="next" value="{{ request.path }}">
+        <button class="btn btn-danger d-blcok" type="submit">Cancel
+          <input type="text" name="queueIsPass" value="true" hidden>
+          <input type="text" name="status" value="cancel" hidden></button>
+        <input type="number" name="point" value="0" hidden>
+      </td>
+    </tr>
+
+    <tr class="text-center align-middle">
+      <td>{{queues_res.queueID}}</td>
+      <td>{{queues_res.queueCreated}}</td>
+      <td class="text-danger">{{queues_res.reserveDateTime}}</td>
+      <td>
+        <input type="hidden" name="next" value="{{ request.path }}">
+        <select class="form-select d-inline me-2" style="width: 150px;" name="status">
+          <option selected hidden>{{queues_res.status}}</option>
+          <option value="calling">calling</option>
+          <option value="waiting">waiting</option>
+        </select>
+      </td>
+      <td>
+        <button class="btn btn-primary d-blcok" type="submit">Update
+          <input type="text" name="queueIsPass" value="false" hidden></button>
+        <input type="number" name="point" value="0" hidden>
+      </td>
+      <td>
+        <input type="hidden" name="next" value="{{ request.path }}">
+        <button class="btn btn-success d-blcok" type="submit">Success
+          <input type="text" name="queueIsPass" value="true" hidden>
+          <input type="text" name="status" value="success" hidden>
+          <input type="number" name="point" value="3" hidden>
+        </button>
+      </td>
+      <td>
+        <input type="hidden" name="next" value="{{ request.path }}">
+        <button class="btn btn-danger d-blcok" type="submit">Fail
+          <input type="text" name="queueIsPass" value="true" hidden>
+          <input type="text" name="status" value="fail" hidden></button>
+        <input type="number" name="point" value="-10" hidden>
+      </td>
+      <td>
+        <input type="hidden" name="next" value="{{ request.path }}">
+        <button class="btn btn-danger d-blcok" type="submit">Cancel
+          <input type="text" name="queueIsPass" value="true" hidden>
+          <input type="text" name="status" value="cancel" hidden></button>
+        <input type="number" name="point" value="0" hidden>
+      </td>
+      </form>
+    </tr>
+  </tbody>
+</table>
+{% include 'queue/updateQueueModal.html' %}
 {% endblock content %}
