--- a/myproject/templates/components/sidebar.html
+++ b/myproject/templates/components/sidebar.html
@@ -160,10 +160,11 @@
                 </button>
                 <div class="collapse" id="dashboard-collapse" style="">
                     <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small ms-5">
-                        <li><a href="#" class="link-dark rounded text-white">Overview</a></li>
-                        <li><a href="#" class="link-dark rounded text-white">Weekly</a></li>
-                        <li><a href="#" class="link-dark rounded text-white">Monthly</a></li>
-                        <li><a href="#" class="link-dark rounded text-white">Annually</a></li>
+                        {% for restaurant in request.user.companyID.restaurant_set.all %}
+                             <li><a href="{% url 'menu' restaurant.resID %}" class="link-dark rounded text-white">{{restaurant.resName}}</a></li>
+                        {% endfor %}
+                        
+                        
                     </ul>
                 </div>
             </li>
