--- a/myproject/templates/app/index.html
+++ b/myproject/templates/app/index.html
@@ -19,7 +19,7 @@
 
 <div class="wrapper" style = "overflow-y : hidden; overflow-x : scroll">
     <div class="inner">
-        {% for category in categorys %}
+        {% for category in categories %}
             {% include 'restaurants/categoryCard.html' %}
         {% endfor %}
     </div>
