--- a/myproject/templates/restaurants/managerHome.html
+++ b/myproject/templates/restaurants/managerHome.html
@@ -4,64 +4,56 @@
 {% comment %} <script src="{% static 'js/main.js' %}"></script> {% endcomment %}
 <div class="container mt-5">
     <div class="row">
-        <div class="col-md-6">
-            <h2>Customer Log</h2>
-            <input class="form-control mt-4 mb-3" id="Search" type="text" placeholder="Search..">
-            <br>
-            <div class="mb-3" style="overflow-x: hidden; overflow-y : scroll; height : 600px">
-                <table class="table border border-3">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Date</th>
-                            <th scope="col">Name</th>
-                            <th scope="col">Access</th>
-                            <th scope="col">Leaving</th>
-                            <th scope="col">Queue</th>
-                            <th scope="col">Point</th>
-                        </tr>
-                    </thead>
-                    <tbody id="Table">
-                        <tr>
-                            <th scope="row">1</th>
-                            <td scope="row">12 Febuary 2020 </td>
-                            <td>
-                                <a href="#">Pete Vongchanapibul</a>
-                            </td>
-                            <td>15:00:12</td>
-                            <td>16:00:37</td>
-                            <td>A3210</td>
-                            <td>+3</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td scope="row">12 Febuary 2020 </td>
-                            <td>
-                                <a href="#">Ferb Fletcher</a>
-                            </td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-10</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <h2>Queue</h2>
-            <input class="form-control mt-4" id="queueSearch" type="text" placeholder="Search..">
-            <br>
-            <div class="mb-3" style="overflow-x: hidden; overflow-y : scroll; height : 600px">
-                {% include 'queue/queue.html'%}
-            </div>
+        <h2>Queue</h2>
+        <input class="form-control mt-4" id="queueSearch" type="text" placeholder="Search..">
+        <br>
+        <div class="mb-3" style="overflow-x: hidden; overflow-y : scroll; height : 600px">
+            {% include 'queue/queue.html'%}
         </div>
     </div>
-    {% comment %} <div class="row justify-content-end">
-        <a href="{%url 'manageStaff' restaurant.resID%}" class="btn btn-primary mt-4 me-2" style="width : 25%">Staff
-            member</a>
-        <a href="{%url 'menu' restaurant.resID %}" class="btn btn-secondary mt-4" style="width : 25%">Menu
-            edit</a>
-    </div> {% endcomment %}
+        <div class="row">
+        <h2>Customer Log</h2>
+        <input class="form-control mt-4 mb-3" id="Search" type="text" placeholder="Search..">
+        <br>
+        <div class="mb-3" style="overflow-x: hidden; overflow-y : scroll; height : 600px">
+            <table class="table border border-3">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Date</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Access</th>
+                        <th scope="col">Leaving</th>
+                        <th scope="col">Queue</th>
+                        <th scope="col">Point</th>
+                    </tr>
+                </thead>
+                <tbody id="Table">
+                    <tr>
+                        <th scope="row">1</th>
+                        <td scope="row">12 Febuary 2020 </td>
+                        <td>
+                            <a href="#">Pete Vongchanapibul</a>
+                        </td>
+                        <td>15:00:12</td>
+                        <td>16:00:37</td>
+                        <td>A3210</td>
+                        <td>+3</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td scope="row">12 Febuary 2020 </td>
+                        <td>
+                            <a href="#">Ferb Fletcher</a>
+                        </td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-10</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 {% endblock content %}
