--- a/myproject/templates/app/index.html
+++ b/myproject/templates/app/index.html
@@ -9,21 +9,22 @@
         <i class="fas fa-search"></i>
     </span>
 </div>
-{% comment %}
+
 <hr style="height:3px;border-width:0;color:gray;background-color:gray">
-<div class="row row-cols-4 row-cols-md-6">
+
+<div class="row">
     {% for category in categories %}
     {% include 'restaurants/categoryCard.html'%}
     {% endfor %}
-</div> {% endcomment %}
+</div>
 
-<div class="wrapper" style = "overflow-y : hidden; overflow-x : scroll">
+{% comment %} <div class="wrapper" style="overflow-y : hidden; overflow-x : scroll">
     <div class="inner">
-        {% for category in categorys %}
-            {% include 'restaurants/categoryCard.html' %}
+        {% for category in categories %}
+        {% include 'restaurants/categoryCard.html' %}
         {% endfor %}
     </div>
-</div>
+</div> {% endcomment %}
 <hr style="height:3px;border-width:0;color:gray;background-color:gray">
 <div class="row" id="Table-main">
     {% for restaurant in restaurants %}
