--- a/myproject/templates/admin/dashboard.html
+++ b/myproject/templates/admin/dashboard.html
@@ -1,13 +1,14 @@
 {% extends 'components/base.html' %}
 {% load static %}
 {% block content %}
-<div class="row">
-  <h3>Number of usage</h3>
+
+<h3>Number of usage</h3>
+<div class="card p-2  mb-4">
   <table class="table">
     <thead>
       <tr class=text-center>
-        <th scope="col">Date</th>
-        <th scope="col">User number</th>
+        <th class="col-6">Date</th>
+        <th class="col-6">User number</th>
       </tr>
     </thead>
     <tbody class=text-center>
@@ -17,24 +18,23 @@
       </tr>
       <tr>
         <td>05/06/2021</td>
-        <td>4</>
+        <td>4</td>
       </tr>
       <tr>
         <td>06/06/2021</td>
-        <td>3</>
+        <td>3</td>
       </tr>
     </tbody>
   </table>
 </div>
 
-
-<div class="row">
-  <h3>Number of cancel</h3>
+<h3>Number of cancel</h3>
+<div class="card p-2  mb-4">
   <table class="table">
     <thead>
       <tr class=text-center>
-        <th scope="col">Date</th>
-        <th scope="col">Cancel number</th>
+        <th class="col-6">Date</th>
+        <th class="col-6">Cancel number</th>
       </tr>
     </thead>
     <tbody class=text-center>
@@ -44,23 +44,23 @@
       </tr>
       <tr>
         <td>05/06/2021</td>
-        <td>3</>
+        <td>3</td>
       </tr>
       <tr>
         <td>06/06/2021</td>
-        <td>2</>
+        <td>2</td>
       </tr>
     </tbody>
   </table>
 </div>
 
-<div class="row">
-  <h3>Number of success</h3>
+<h3>Number of success</h3>
+<div class="card p-2  mb-4">
   <table class="table">
     <thead>
       <tr class=text-center>
-        <th scope="col">Date</th>
-        <th scope="col">Success number</th>
+        <th class="col-6">Date</th>
+        <th class="col-6">Success number</th>
       </tr>
     </thead>
     <tbody class=text-center>
@@ -70,37 +70,37 @@
       </tr>
       <tr>
         <td>05/06/2021</td>
-        <td>4</>
+        <td>4</td>
       </tr>
       <tr>
         <td>06/06/2021</td>
-        <td>3</>
+        <td>3</td>
       </tr>
     </tbody>
   </table>
 </div>
 
-<div class="row">
-  <h3>Number of new account</h3>
+<h3>Number of new account</h3>
+<div class="card p-2  mb-4">
   <table class="table">
     <thead>
-      <tr class= text-center>
-        <th scope="col">Date</th>
-        <th scope="col">Account</th>
+      <tr class=text-center>
+        <th class="col-6">Date</th>
+        <th class="col-6">Account</th>
       </tr>
     </thead>
-    <tbody class= text-center>
+    <tbody class=text-center>
       <tr>
         <td>04/06/2021</td>
         <td>5</td>
       </tr>
       <tr>
         <td>05/06/2021</td>
-        <td>10</>
+        <td>10</td>
       </tr>
       <tr>
         <td>06/06/2021</td>
-        <td>15</>
+        <td>15</td>
       </tr>
     </tbody>
   </table>
