--- a/myproject/templates/restaurants/indexResCard.html
+++ b/myproject/templates/restaurants/indexResCard.html
@@ -1,5 +1,5 @@
 {% load static %}
-
+{% if restaurant.success == 1 %}
 <div class="col-md-4 All {{restaurant.categoryID.fullCate}}" id="card-filter">
     <div class="card p-3 mb-2  border border-3 ">
         <a href="{% url 'resCard' restaurant.resID %}">
@@ -10,8 +10,8 @@
             <div class="card-body d-flex flex-column">
                 <h4 class="card-title">{{restaurant.resName}}</h4>
                 <p class="card-text mt-auto">{{restaurant.categoryID.categoryName}}</p>
-
             </div>
         </div>
     </div>
 </div>
+{% endif %}
