--- a/myproject/templates/users/profile.html
+++ b/myproject/templates/users/profile.html
@@ -94,7 +94,7 @@
                                         <th scope="col">Restaurant</th>
                                         <th scope="col"><input type="submit" class="profile-edit-btn"
                                                 data-bs-toggle="modal" data-bs-target="#exec-edit-res"
-                                                name="Edit Restaurant" value="Edit Restaurant" /></th>
+                                                name="Add Restaurant" value="Add Restaurant" /></th>
                                     </tr>
                                 </thead>
                                 <tbody>
