--- a/myproject/templates/components/sidebar.html
+++ b/myproject/templates/components/sidebar.html
@@ -113,7 +113,7 @@
                     <svg class="bi me-2" width="16" height="16">
                         <use xlink:href="#home"></use>
                     </svg>
-                    Customer log & Queue
+                    Branch list
                 </a>
             </li>
             <li>
