--- a/myproject/templates/restaurants/execCreateResModal.html
+++ b/myproject/templates/restaurants/execCreateResModal.html
@@ -8,7 +8,7 @@
                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
              </div>
              <div class="modal-body">
-                 <h1>Edit Restaurant</h1>
+                 <h1>Add Restaurant</h1>
                  <div class="card p-3  border border-3 " style="">
                      <form class="mt-3 ms-2" method="POST"
                          action="{% url 'execCreateResModal' request.user.companyID %}" enctype="multipart/form-data">
